# github-profile-trophy-rs

./: Cargo.toml  README.md  mise.toml
.github/workflows/: release.yml
src/: constants.rs  error.rs  github.rs  html.rs  main.rs  models.rs  params.rs  svg.rs  themes.rs  trophy.rs
