[package]
name = "github-profile-trophy-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "http2",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
tower-http = { version = "0.6.8", features = ["cors"] }
